<resources>
    <string name="app_name">The Dicer</string>
    <string name="diceImage">Dice</string>
    <string name="the_dicer">The Dicer</string>
    <string name="rollButton">R O l l</string>
    <string name="total_result">Total Result</string>
    <string name="rolls">Rolls</string>
    <string name="die_qty">Die QTY:</string>
    <string name="d2">d2</string>
    <string name="d4">d4</string>
    <string name="d6">d6</string>
    <string name="d8">d8</string>
    <string name="d10">d10</string>
    <string name="d12">d12</string>
    <string name="d20">d20</string>
    <string name="d100">d100</string>
    <string name="die_type">Die Type</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
