<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" tools:layout_editor_absoluteY="25dp" android:visibility="visible"
        android:id="@+id/DOM">-->

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp" android:id="@+id/rollerAppLayout">

    <ImageView
            android:layout_width="388dp"
            android:layout_centerHorizontal="true"
            android:layout_height="124dp" app:srcCompat="@mipmap/dices" android:id="@+id/logoImage"
            android:layout_marginTop="5dp" android:contentDescription="@string/diceImage"
    />

    <TextView
            android:layout_width="395dp"
            android:layout_height="83dp" android:id="@+id/rollsResultsText" android:textStyle="bold"
            android:textAlignment="center" android:layout_marginTop="130dp" android:textSize="36sp"
            android:background="#C3C0C0"
    />

    <TextView
            android:text="@string/rolls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/rollsLabel" android:layout_marginTop="214dp"
            android:textSize="24sp" android:textStyle="bold" android:textAlignment="center"
    />

    <TextView
            android:layout_height="wrap_content" android:id="@+id/totalResultsText" android:textStyle="bold"
            android:textAlignment="center" android:layout_marginTop="280dp" android:textSize="36sp"
            android:layout_width="120dp" android:layout_marginStart="135dp" android:background="#C3C0C0"
    />

    <TextView
            android:text="@string/total_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/totalResultsLabel" android:layout_marginTop="330dp"
            android:textSize="24sp" android:textStyle="bold" android:textAlignment="center"
    />

    <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10" android:progress="1" android:id="@+id/dieQtySeekBar" android:layout_marginTop="400dp"
    />

    <TextView
            android:text="@string/die_qty"
            android:layout_width="80dp"
            android:layout_height="wrap_content" android:id="@+id/dieQTYLabel" android:layout_marginTop="430dp"
            android:textSize="18sp" android:textStyle="bold" android:textAlignment="center"
            android:layout_marginStart="110dp"
    />

    <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content" android:id="@+id/dieQTYValue" android:layout_marginTop="430dp"
            android:textSize="18sp" android:textStyle="bold" android:textAlignment="center"
            android:layout_marginStart="190dp"
    />

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/dieTypeRadioGroup"
            android:layout_marginTop="500dp">

        <RadioButton
                android:text="@string/d2"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d2"/>

        <RadioButton
                android:text="@string/d4"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_weight="1"
                android:id="@+id/d4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <RadioButton
                android:text="@string/d6"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_weight="1"
                android:id="@+id/d6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <RadioButton
                android:text="@string/d8"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_weight="1"
                android:id="@+id/d8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <RadioButton
                android:text="@string/d10"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_weight="1"
                android:id="@+id/d10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <RadioButton
                android:text="@string/d12"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_weight="1"
                android:id="@+id/d12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <RadioButton
                android:text="@string/d20"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_weight="1"
                android:id="@+id/d20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <RadioButton
                android:text="@string/d100"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_weight="1"
                android:id="@+id/d100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>

    </RadioGroup>

    <Button
            android:text="@string/rollButton"
            android:layout_width="399dp"
            android:layout_height="101dp" android:id="@+id/rollButton" android:layout_marginTop="580dp"
            android:textSize="24sp" android:textStyle="bold" android:onClick="handleRollButton"
    />

</RelativeLayout>